--- a/css/reservations.css
+++ b/css/reservations.css
@@ -133,3 +133,17 @@ background: #1e1e1e;
   font-size: 1.5em;
 }
 
+.reservation-gallery {
+  text-align: center;
+  background: #044678;
+  padding-top: 0.75em;
+}
+.reservation-gallery a {
+  width: 28%;
+  display: inline-block;
+  height: 14em;
+  background-size: cover;
+  background-position: center;
+  margin: 0em 0.5em 0.5em 0.5em;
+  border: 0.25em solid #1e1e1e;
+}
